@@ -332,6 +332,25 @@
     <td>Thac's RPMs for Mandrake</td>
   </tr>
 
+  
+  <tr>
+    <td><p align="center"><img src="@IMAGES@gentoo.jpeg"></p></td>
+    <td>
+    Gentoo
+    </td>
+    <td>
+      
+    </td>
+    <td>
+      <b>Go <a href="http://packages.gentoo.org/packages/?category=media-sound;name=lilypond">here</a>.
+      </b>
+      (<a href="#mandrake-notes">NOTE</a>)
+    </td>
+    <td>2.0.0</td>
+    <td></td>
+  </tr>
+
+  
 <tr bgcolor="#e8ffe8" >
 <td></td><td colspan=6><h3>Other</h3></td>
   </tr>
@@ -347,7 +366,7 @@
     <td>
       <b>  Go <a href="macos.html">here</a></b>
     </td>
-    <td>2.1.28</td>  
+    <td>2.1.30</td>  
     <td>
       <a href="mailto:neeracherATmacDOTcom">Matthias Neeracher</a>
     </td> 
